[tool.poetry]
name = "pwzn2023-live"
version = "0.1.0"
description = ""
authors = ["Maciej J. Mrowinski <47922372+brokenpumpernickel@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "pwzn2023_live"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
ascii-graph = "^1.5.1"
tqdm = "^4.66.1"
rich = "^13.6.0"
pillow = "^10.1.0"
numpy = "^1.26.1"
numba = "^0.58.1"
matplotlib = "^3.8.2"
beautifulsoup4 = "^4.12.2"
selenium = "^4.15.2"
scipy = "^1.11.4"
sympy = "^1.12"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
notebook = "^7.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
